add pictures an array of skateparks and got the button on the login page to fire

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 	<script src="app.js"></script>
 	<script src="controllers/loginCtrl.js"></script>
+	<script src="controllers/mainCtrl.js"></script>
+	<script src="services/mainService.js"></script>
 </body>
 </html>
