set up route to the individual parks that miles wishes he was shredding at

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 	<script src="controllers/loginCtrl.js"></script>
 	<script src="controllers/mainCtrl.js"></script>
 	<script src="services/mainService.js"></script>
+	<script src="controllers/parkCtrl.js"></script>
 </body>
 </html>
