--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+	<!-- gonna add jqury and see what happens -->
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<script src="app.js"></script>
 	<script src="controllers/loginCtrl.js"></script>
 	<script src="controllers/mainCtrl.js"></script>
