used one directive to get a hideous footer on the page now goin to get main login to use a submit then i will work on second directive

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 	<script src="controllers/mainCtrl.js"></script>
 	<script src="services/mainService.js"></script>
 	<script src="controllers/parkCtrl.js"></script>
+	<script src="directives/footerDir.js"></script>
 </body>
 </html>
