added a addnewpark directive but it is still not functioning i am working on the functions and the ng submit

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 	<script src="services/mainService.js"></script>
 	<script src="controllers/parkCtrl.js"></script>
 	<script src="directives/footerDir.js"></script>
+	<script src="directives/addParkDir.js"></script>
 </body>
 </html>
