--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="skateApp">
 <head>
+	<script src="https://cdn.firebase.com/js/client/2.3.1/firebase.js"></script>
 	<link rel="stylesheet" href="styles.css">
 	<meta charset="UTF-8">
 	<title>skateApp</title>
