--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<ui-view></ui-view>
 	
 	
+	<script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
+	<script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 	<script src="app.js"></script>
 	<script src="controllers/loginCtrl.js"></script>
